--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,23 @@
 asgiref==3.6.0
+certifi==2022.12.7
+charset-normalizer==3.1.0
 Django==4.1.5
 django-admin==2.0.1
 django-crispy-forms==1.14.0
 django-excel-base==1.0.5
 django-excel-response2==3.0.3
 django-six==1.0.4
+django-storages==1.13.2
+dropbox==11.36.0
+idna==3.4
+Pillow==9.5.0
+ply==3.11
+psycopg2==2.9.5
 pytz==2022.7.1
+requests==2.28.2
 screen==1.0.1
+six==1.16.0
 sqlparse==0.4.3
+stone==3.3.1
+urllib3==1.26.15
 xlwt==1.3.0
